--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-dom": "^16.4.1",
     "react-feather": "^1.1.0",
     "react-helmet": "^5.2.0",
-    "react-markdown": "^3.3.2"
+    "react-markdown": "^3.3.2",
+    "rebass": "^3.0.1",
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
