--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,19 +4,19 @@ backend:
   branch: master # Branch to update (optional; defaults to master)
 
 # display_url: https://gatsbro.netlify.com # This url will display in the top-right of the CMS
-media_folder: 'static/images/uploads' # Media files will be stored in the repo under static/images/uploads
-public_folder: '/images/uploads' # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
+public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
 
 collections: # A list of collections the CMS should be able to edit
-  - name: 'pages'
-    label: 'Page'
+  - name: "pages"
+    label: "Page"
     delete: false # Prevent users from deleting documents in this collection
     editor:
       preview: true
     files:
-      - file: 'content/pages/blog.md'
-        label: 'Blog Page'
-        name: 'blog-page'
+      - file: "content/pages/blog.md"
+        label: "List"
+        name: "list-page"
         fields:
           - {
               label: Template,
@@ -24,14 +24,19 @@ collections: # A list of collections the CMS should be able to edit
               widget: hidden,
               default: BlogIndex,
             }
-          - { label: Slug, name: slug, widget: hidden, default: 'blog' }
+          - { label: Slug, name: slug, widget: hidden, default: "blog" }
           - { label: Title, name: title, widget: string }
           - { label: Featured Image, name: featuredImage, widget: image }
-          - { label: Subtitle, name: subtitle, widget: markdown }
-          - label: 'Meta'
+          - {
+              label: Subtitle,
+              name: subtitle,
+              widget: markdown,
+              required: false,
+            }
+          - label: "Meta"
             required: false
-            name: 'meta'
-            widget: 'object'
+            name: "meta"
+            widget: "object"
             fields:
               - { label: Title, name: title, widget: string, required: false }
               - {
@@ -39,7 +44,7 @@ collections: # A list of collections the CMS should be able to edit
                   name: description,
                   widget: text,
                   required: false,
-                  pattern: ['.{,300}', 'Must not exceed 300 characters'],
+                  pattern: [".{,300}", "Must not exceed 300 characters"],
                 }
               - {
                   label: Canonical Link,
@@ -54,9 +59,9 @@ collections: # A list of collections the CMS should be able to edit
                   required: false,
                 }
 
-      - file: 'content/pages/home.md'
-        label: 'Home Page'
-        name: 'home-page'
+      - file: "content/pages/home.md"
+        label: "Home Page"
+        name: "home-page"
         fields:
           - {
               label: Template,
@@ -64,13 +69,13 @@ collections: # A list of collections the CMS should be able to edit
               widget: hidden,
               default: HomePage,
             }
-          - { label: Slug, name: slug, widget: hidden, default: '' }
+          - { label: Slug, name: slug, widget: hidden, default: "" }
           - { label: Title, name: title, widget: string }
           - { label: Featured Image, name: featuredImage, widget: image }
           - { label: Subtitle, name: subtitle, widget: markdown }
-          - label: 'Reviews'
-            name: 'reviews'
-            widget: 'object'
+          - label: "Reviews"
+            name: "reviews"
+            widget: "object"
             fields:
               - {
                   label: Review 1 Property,
@@ -83,7 +88,7 @@ collections: # A list of collections the CMS should be able to edit
                   name: review1body,
                   widget: text,
                   required: true,
-                  pattern: ['.{,300}', 'Must not exceed 300 characters'],
+                  pattern: [".{,300}", "Must not exceed 300 characters"],
                 }
               - {
                   label: Review 2 Property,
@@ -96,7 +101,7 @@ collections: # A list of collections the CMS should be able to edit
                   name: review2body,
                   widget: text,
                   required: true,
-                  pattern: ['.{,300}', 'Must not exceed 300 characters'],
+                  pattern: [".{,300}", "Must not exceed 300 characters"],
                 }
               - {
                   label: Review 3 Property,
@@ -109,13 +114,13 @@ collections: # A list of collections the CMS should be able to edit
                   name: review3body,
                   widget: text,
                   required: true,
-                  pattern: ['.{,300}', 'Must not exceed 300 characters'],
+                  pattern: [".{,300}", "Must not exceed 300 characters"],
                 }
 
-          - label: 'Meta'
+          - label: "Meta"
             required: false
-            name: 'meta'
-            widget: 'object'
+            name: "meta"
+            widget: "object"
             fields:
               - { label: Title, name: title, widget: string, required: false }
               - {
@@ -123,7 +128,7 @@ collections: # A list of collections the CMS should be able to edit
                   name: description,
                   widget: text,
                   required: false,
-                  pattern: ['.{,300}', 'Must not exceed 300 characters'],
+                  pattern: [".{,300}", "Must not exceed 300 characters"],
                 }
               - {
                   label: Canonical Link,
@@ -143,7 +148,7 @@ collections: # A list of collections the CMS should be able to edit
     editor:
       preview: true
     folder: content/infoPages
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     create: true # Allow users to create new documents in this collection
     fields:
       - {
@@ -156,10 +161,10 @@ collections: # A list of collections the CMS should be able to edit
       - { label: Title, name: title, widget: string }
       - { label: Featured Image, name: featuredImage, widget: image }
       - { label: Body, name: body, widget: markdown }
-      - label: 'Meta'
+      - label: "Meta"
         required: false
-        name: 'meta'
-        widget: 'object'
+        name: "meta"
+        widget: "object"
         fields:
           - { label: Title, name: title, widget: string, required: false }
           - {
@@ -167,7 +172,7 @@ collections: # A list of collections the CMS should be able to edit
               name: description,
               widget: text,
               required: false,
-              pattern: ['.{,300}', 'Must not exceed 300 characters'],
+              pattern: [".{,300}", "Must not exceed 300 characters"],
             }
           - {
               label: Canonical Link,
@@ -182,16 +187,16 @@ collections: # A list of collections the CMS should be able to edit
     editor:
       preview: true
     folder: content/posts
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - { label: Template, name: template, widget: hidden, default: SinglePost }
       - { label: Title, name: title, widget: string }
-      - label: 'Status'
-        name: 'status'
-        widget: 'select'
-        options: ['Published', 'Featured', 'Draft']
-        default: 'Published'
+      - label: "Status"
+        name: "status"
+        widget: "select"
+        options: ["Published", "Featured", "Draft"]
+        default: "Published"
       - { label: Date / Order, name: date, widget: date }
       - {
           label: Featured Image,
@@ -201,21 +206,21 @@ collections: # A list of collections the CMS should be able to edit
         }
       - { label: Excerpt, name: excerpt, widget: text }
       - { label: Content, name: body, widget: markdown }
-      - label: 'Categories'
-        name: 'categories'
-        widget: 'list'
+      - label: "Categories"
+        name: "categories"
+        widget: "list"
         required: false
         fields:
-          - label: 'Category'
-            name: 'category'
-            widget: 'relation'
-            collection: 'postCategories'
-            searchFields: ['title']
-            valueField: 'title'
-      - label: 'Meta'
+          - label: "Category"
+            name: "category"
+            widget: "relation"
+            collection: "postCategories"
+            searchFields: ["title"]
+            valueField: "title"
+      - label: "Meta"
         required: false
-        name: 'meta'
-        widget: 'object'
+        name: "meta"
+        widget: "object"
         fields:
           - { label: Title, name: title, widget: string, required: false }
           - {
@@ -223,7 +228,7 @@ collections: # A list of collections the CMS should be able to edit
               name: description,
               widget: text,
               required: false,
-              pattern: ['.{,300}', 'Must not exceed 300 characters'],
+              pattern: [".{,300}", "Must not exceed 300 characters"],
             }
           - {
               label: Canonical Link,
@@ -238,7 +243,7 @@ collections: # A list of collections the CMS should be able to edit
     editor:
       preview: false
     folder: content/postCategories
-    slug: '{{slug}}'
+    slug: "{{slug}}"
     create: true # Allow users to create new documents in this collection
     fields: # The fields each document in this collection have
       - { label: Template, name: template, widget: hidden, default: BlogIndex }
@@ -260,15 +265,15 @@ collections: # A list of collections the CMS should be able to edit
       #     - {label: Canonical Link, name: canonicalLink, widget: string, required: false}
       #     - {label: Noindex, name: noindex, widget: boolean, required: false}
 
-  - name: 'settings'
-    label: 'Settings'
+  - name: "settings"
+    label: "Settings"
     delete: false # Prevent users from deleting documents in this collection
     editor:
       preview: false
     files:
-      - file: 'content/settings/global.yml'
-        label: 'Global Settings'
-        name: 'global-settings'
+      - file: "content/settings/global.yml"
+        label: "Global Settings"
+        name: "global-settings"
         fields:
           - { label: Site Title, name: siteTitle, widget: string }
           - { label: Site Url, name: siteUrl, widget: string, required: false }
