--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -143,45 +143,6 @@ collections: # A list of collections the CMS should be able to edit
                   required: false,
                 }
 
-  - name: infoPages
-    label: Info Page
-    editor:
-      preview: true
-    folder: content/infoPages
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
-    create: true # Allow users to create new documents in this collection
-    fields:
-      - {
-          label: Template,
-          name: template,
-          widget: hidden,
-          default: DefaultPage,
-        }
-      - { label: Slug, name: slug, widget: string }
-      - { label: Title, name: title, widget: string }
-      - { label: Featured Image, name: featuredImage, widget: image }
-      - { label: Body, name: body, widget: markdown }
-      - label: "Meta"
-        required: false
-        name: "meta"
-        widget: "object"
-        fields:
-          - { label: Title, name: title, widget: string, required: false }
-          - {
-              label: Description,
-              name: description,
-              widget: text,
-              required: false,
-              pattern: [".{,300}", "Must not exceed 300 characters"],
-            }
-          - {
-              label: Canonical Link,
-              name: canonicalLink,
-              widget: string,
-              required: false,
-            }
-          - { label: Noindex, name: noindex, widget: boolean, required: false }
-
   - name: posts
     label: Post
     editor:
@@ -204,7 +165,6 @@ collections: # A list of collections the CMS should be able to edit
           widget: image,
           required: false,
         }
-      - { label: Excerpt, name: excerpt, widget: text }
       - { label: Content, name: body, widget: markdown }
       - label: "Categories"
         name: "categories"
@@ -217,6 +177,34 @@ collections: # A list of collections the CMS should be able to edit
             collection: "postCategories"
             searchFields: ["title"]
             valueField: "title"
+      - label: "Hotel info"
+        required: false
+        name: "hotelInfo"
+        widget: "object"
+        fields:
+          - { label: Address, name: address, widget: string }
+          - { label: City, name: city, widget: string }
+          - { label: Closest Airport, name: closestAirport, widget: string }
+          - label: "CVB Member?"
+            name: "cvbMember"
+            widget: "select"
+            options:
+              - { label: "Yes", value: true }
+              - { label: "No", value: false }
+          - { label: "Diamond amount", name: diamonds, widget: string }
+          - {
+              label: Director of Catering,
+              name: directorCatering,
+              widget: string,
+            }
+          - { label: Director of Sales, name: direcotSales, widget: string }
+          - label: "Fitness Center"
+            name: "fitnessCenter"
+            widget: "select"
+            options:
+              - { label: "Yes", value: true }
+              - { label: "No", value: false }
+          - { label: General Email, name: generalEmail, widget: string }
       - label: "Meta"
         required: false
         name: "meta"
